--- a/demo/demo.html
+++ b/demo/demo.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style type="text/css">
+      html {
+        font-family: Helvetica, Arial, sans-serif;
+      }
+
       input,
       textarea {
         border: 2px solid #333;
